--- a/dia-5/index.html
+++ b/dia-5/index.html
@@ -20,4 +20,5 @@
   </body>
   <script src="animation.js"></script>
   <script src="app.js"></script>
+  <script src="appExtra.js"></script>
 </html>
